--- a/learn-m365-pr/m365/zero-trust-applications/index.yml
+++ b/learn-m365-pr/m365/zero-trust-applications/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Describe application access in Zero Trust
-summary: Learn how to use Zero Trust to secure your applications, to protect your organization and its users.
+summary: Learn how to use Zero Trust to secure your applications and to protect your organization and its users.
 abstract: |
   By the end of this module, you'll be able to:
     - Describe applications.
