--- a/learn-m365-pr/m365/zero-trust-introduction/index.yml
+++ b/learn-m365-pr/m365/zero-trust-introduction/index.yml
@@ -3,7 +3,7 @@ uid: learn-m365.zero-trust-introduction
 metadata:
   moduleType: standard
   title: Introduction to Zero Trust
-  description: In recent years, the Zero Trust concept has emerged as a go to security solution for organizations big or small. The Zero trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
+  description: In recent years, the Zero Trust concept has emerged as a go to security solution for organizations big or small. The Zero Trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
