--- a/learn-m365-pr/m365/zero-trust-applications/index.yml
+++ b/learn-m365-pr/m365/zero-trust-applications/index.yml
@@ -3,7 +3,7 @@ uid: learn-m365.zero-trust-applications
 metadata:
   moduleType: standard
   title: Describe application access in Zero Trust
-  description: Learn how to use Zero Trust to secure your applications, to protect your organization and its users.
+  description: Learn how to use Zero Trust to secure your applications and to protect your organization and its users.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
