--- a/learn-m365-pr/m365/zero-trust-data/know-your-data.yml
+++ b/learn-m365-pr/m365/zero-trust-data/know-your-data.yml
@@ -4,7 +4,7 @@ title: Know your data
 metadata:
   unitType: learning-content
   title: Know your data
-  description: Learn to define data and its different states, and what makes it sensitive. You'll also see what your organization can do to discover and identify its data.
+  description: Learn to define data, its different states, and what makes it sensitive. You'll also see what your organization can do to discover and identify its data.
   ms.date: 7/7/2022
   author: beccarobins
   ms.author: beccarobins
