--- a/learn-m365-pr/m365/zero-trust-applications/describe-cloud-applications.yml
+++ b/learn-m365-pr/m365/zero-trust-applications/describe-cloud-applications.yml
@@ -4,7 +4,7 @@ title: Describe cloud applications
 metadata:
   unitType: learning-content
   title: Describe cloud applications
-  description: Learn how to define cloud applications, and get an introduction to the concept of shadow IT and its implications.
+  description: Learn how to define cloud applications and get an introduction to the concept of shadow IT and its implications.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
