--- a/learn-m365-pr/m365/zero-trust-endpoints/1-introduction.yml
+++ b/learn-m365-pr/m365/zero-trust-endpoints/1-introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: Introduction
-  description: Modern organizations deal with a great variety of endpoints, in larger numbers than ever before. They all require access to carry out a task, or enable users to do their daily work. 
+  description: Modern organizations deal with a great variety of endpoints, in larger numbers than ever before. They all require access to carry out a task or enable users to do their daily work. 
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
