--- a/learn-m365-pr/m365/zero-trust-endpoints/introduction.yml
+++ b/learn-m365-pr/m365/zero-trust-endpoints/introduction.yml
@@ -12,4 +12,4 @@ metadata:
   ms.prod: learning-m365
 durationInMinutes: 1
 content: |
-  [!include[](includes/1-introduction.md)]
+  [!include[](includes/introduction.md)]
