--- a/learn-m365-pr/m365/zero-trust-introduction/index.yml
+++ b/learn-m365-pr/m365/zero-trust-introduction/index.yml
@@ -3,14 +3,14 @@ uid: learn-m365.zero-trust-introduction
 metadata:
   moduleType: standard
   title: Introduction to Zero Trust
-  description: In recent years, the Zero Trust concept has emerged as a go to security solution for organizations big or small. The Zero Trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
+  description: In recent years, the Zero Trust concept has emerged as a go-to security solution for organizations big or small. The Zero Trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
 title: Introduction to Zero Trust
-summary: In recent years, the Zero Trust concept has emerged as a go to security solution for organizations big or small. The Zero Trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
+summary: In recent years, the Zero Trust concept has emerged as a go-to security solution for organizations big or small. The Zero Trust approach is a combination of modern technologies and best practices that strengthens the security infrastructure within your organization.
 abstract: |
   By the end of this module, you'll be able to:
     - Describe the Zero Trust security model and its principles.
