Replaces curly apostrophes with straight ones

--- a/learn-m365-pr/m365/zero-trust-introduction/introduction.yml
+++ b/learn-m365-pr/m365/zero-trust-introduction/introduction.yml
@@ -4,7 +4,7 @@ title: Introduction
 metadata:
   unitType: introduction
   title: Introduction
-  description: Learn about the Zero Trust security model, how it works as a security strategy, the principles it’s based on, and its primary components.
+  description: Learn about the Zero Trust security model, how it works as a security strategy, the principles it's based on, and its primary components.
   ms.date: 06/22/2022
   author: beccarobins
   ms.author: beccarobins
