--- a/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
@@ -13,3 +13,27 @@ metadata:
 durationInMinutes: 1
 content: |
   [!include[](includes/6-review-audience-targeting-settings-before-launching.md)]
+quiz:
+  questions:
+  - content: "Megan is the SharePoint admin for her organization’s Viva Connections site. Before updating and publishing her organization’s Viva Connections Dashboard, what should Megan do to ensure she is targeting the right people on shifts for this updated shift card?"
+    choices:
+    - content: "Open the Dashboard in a “Preview” mode to confirm she has selected the right audience to target."
+      isCorrect: true
+      explanation: "You should take this step before publishing the newly updated Dashboard or sharing the information with your employees."
+    - content: "Nothing. Megan can publish the updated Dashboard right away."
+      isCorrect: false
+      explanation: "Double-checking your audience targeting in a “Preview” mode is critical. It prevents mistakes and allows you to see how users will view the latest updates on their end."
+    - content: "Update the Dashboard, share it with the nurses on shifts, and then go back and make additional edits as needed."
+      isCorrect: false
+      explanation: "While user testing is important, to ensure the correct audience targeting, Megan should use the “Preview” feature to confirm that she has selected the right audience to target."
+  - content: "Which statement for the tools below is a correct description for personalizing the Viva Connections experience for different roles and regions?"
+    choices:
+    - content: "You can only apply audience targeting to Dashboard cards at the card level, which will require card customization by developers. "
+      isCorrect: true
+      explanation: "You can apply audience targeting directly at the dashboard by adding targeted audience groups for each Dashboard card. "
+    - content: "You can apply audience targeting to cards on the Dashboard and to links in the global navigation displayed in Resources. "
+      isCorrect: false
+      explanation: "Audience targeting can be applied while in edit mode for both Dashboard and Resources.  "
+    - content: "For the Feed, the News boost feature can be used to surface the most important news. "
+      isCorrect: false
+      explanation: "Although the New boost feature is a Feed feature to promote important news, this features itself does not customize news for employees with different roles and regions."
