--- a/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
+++ b/learn-m365-pr/m365/viva-connections-set-up/6-review-audience-targeting-settings-before-launching.yml
@@ -4,13 +4,13 @@ title: Review audience targeting settings before launching
 metadata:
   unitType: learning-content
   title: Review audience targeting settings before launching
-  description: Apply audience targeting strategies for Dashbaord cards, Feed, and Resources. Preview before launch to make sure the right audiences see the right content.
+  description: Apply audience targeting strategies for Dashboard cards, Feed, and Resources. Preview before launch to make sure the right audiences see the right content.
   ms.date: 6/23/2022
   author: maggierui
   ms.author: ruihu
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
-durationInMinutes: 1
+durationInMinutes: 5
 content: |
   [!include[](includes/6-review-audience-targeting-settings-before-launching.md)]
 quiz:
